--- a/package.json
+++ b/package.json
@@ -40,15 +40,12 @@
     "@genkit-ai/googleai": "^1.8.0",
     "@genkit-ai/vertexai": "^1.8.0",
     "@types/chai": "^5.2.2",
-    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.23",
     "@types/mocha": "^10.0.10",
     "@types/node": "^22.13.14",
     "@types/sinon": "^17.0.4",
-    "body-parser": "^2.2.0",
     "c8": "^10.1.3",
     "chai": "^5.2.0",
-    "cors": "^2.8.5",
     "express": "^4.21.2",
     "genkit": "^1.8.0",
     "gts": "^6.0.2",
@@ -73,8 +70,6 @@
     "uuid": "^11.1.0"
   },
   "peerDependencies": {
-    "express": "^4.21.2",
-    "cors": "^2.8.5",
-    "body-parser": "^2.2.0"
+    "express": "^4.21.2"
   }
 }
