style: format package.json and tsup.config.ts with prettier
- Format typesVersions array in package.json for better readability
- Remove trailing spaces and add missing trailing comma in tsup.config.ts
- Ensure consistent code formatting

--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
   },
   "typesVersions": {
     "*": {
-      "server/*": ["dist/server/*"]
+      "server/*": [
+        "dist/server/*"
+      ]
     }
   },
   "files": [
