feat: mark express as optional peer dependency
Add peerDependenciesMeta to mark express as optional, preventing
package manager warnings when express is not installed. This improves
developer experience for users in non-Node/edge environments where
express is not needed.

--- a/package.json
+++ b/package.json
@@ -71,5 +71,10 @@
   },
   "peerDependencies": {
     "express": "^4.21.2"
+  },
+  "peerDependenciesMeta": {
+    "express": {
+      "optional": true
+    }
   }
 }
